2010-02-02  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-00-06
	* minimal fixes
	
2009-04-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-00-05
	* added missing .icc file

2009-04-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-00-04
	* moved some implementation to icc file to avoid problem 
	with statics
	
	
2009-04-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-00-03
	* expanded interface of fast functions to get TCS type and FDL algo 
	* words - adapted to various possible GT EVM formats
	
